# web-player

./: .cursorignore  .gitignore  PRD_WebSocket_Media_Player.md  README.md  index-single.html  index.html  package-lock.json  package.json  server.js  tsconfig.json
.claude/: CLAUDE.md
agent_docs/: cpp_code_conventions.md
certs/: cert.pem  key.pem
docs/: PRD_WebSocket_Media_Player_v2.md  WS-006_验证文档.md  multi-stream-implementation.md  websocket-工作原理.md  websocket_frame_protocol.md  构建和运行指南.md  核心功能实现说明.md
openspec/changes/archive/2026-02-08-server-send-by-actual-fps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-add-wss-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-add-wss-support/specs/tls-transport/: spec.md
openspec/changes/archive/2026-02-16-add-wss-support/specs/wss-protocol/: spec.md
openspec/changes/archive/2026-02-18-add-media-negotiation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-add-media-negotiation/specs/media-negotiation/: spec.md
openspec/changes/archive/2026-02-20-add-audio-support/: design.md  proposal.md  tasks.md
openspec/specs/audio-codec/: spec.md
openspec/specs/audio-playback/: spec.md
openspec/specs/fps-detection/: spec.md
scripts/: build_ffmpeg.sh  build_wasm.sh  download_ffmpeg.sh
src/js/: app-multi.js  app.js  decoder-init.js
src/js/audio/: AVSync.ts  AudioPlayer.ts
src/js/buffer/: DataBufferQueue.ts
src/js/decoder/: DecoderWrapper.ts  WorkerBridge.ts  types.ts
src/js/render/: WebGLRenderer.ts
src/js/stream/: StreamInstance.ts  StreamManager.ts
src/js/ui/: GridLayout.ts  StreamCard.ts
src/server/: CMakeLists.txt  bitstream_reader.cpp  bitstream_reader.h  connection.cpp  connection.h  frame_protocol.cpp  frame_protocol.h  main.cpp  mp4_demuxer.cpp  mp4_demuxer.h  nal_parser.cpp  nal_parser.h  sps_parser.cpp  sps_parser.h  tcp_server.cpp  tcp_server.h  timer.cpp  timer.h  tls_context.cpp  tls_context.h  tls_server.cpp  tls_server.h  websocket.cpp  websocket.h
src/wasm/: decoder_wasm.c  decoder_wasm.h  frame_protocol.c  frame_protocol.h
src/worker/: decode-worker.ts
tools/: hevc_nal_check.py
(+3 files in other folders)
